// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Android BpkSectionListHeader dark mode should render correctly 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "borderTopColor": "rgb(68, 80, 95)",
      "borderTopWidth": 1,
      "flexDirection": "row",
      "height": 48,
      "justifyContent": "flex-start",
      "paddingHorizontal": 16,
    }
  }
>
  <Text
    allowFontScaling={false}
    style={
      Array [
        Object {
          "color": "rgb(255, 255, 255)",
          "fontFamily": "sans-serif",
          "fontSize": 14,
          "fontWeight": "400",
          "letterSpacing": 0,
          "textAlign": "left",
        },
        Object {
          "fontFamily": "sans-serif-medium",
        },
        Object {
          "color": "rgb(189, 196, 203)",
        },
      ]
    }
  >
    Section header
  </Text>
</View>
`;

exports[`Android BpkSectionListHeader light mode should render correctly 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "borderTopColor": "rgb(224, 227, 229)",
      "borderTopWidth": 1,
      "flexDirection": "row",
      "height": 48,
      "justifyContent": "flex-start",
      "paddingHorizontal": 16,
    }
  }
>
  <Text
    allowFontScaling={false}
    style={
      Array [
        Object {
          "color": "rgb(22, 22, 22)",
          "fontFamily": "sans-serif",
          "fontSize": 14,
          "fontWeight": "400",
          "letterSpacing": 0,
          "textAlign": "left",
        },
        Object {
          "fontFamily": "sans-serif-medium",
        },
        Object {
          "color": "rgb(84, 88, 96)",
        },
      ]
    }
  >
    Section header
  </Text>
</View>
`;
